<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MrCashManager</string>
    <string name="menu_logdata">Log transactions</string>
    <string name="menu_addcategory">Add category</string>
    <string name="menu_removecategory">Remove category</string>
    <string name="menu_undo">Undo transaction</string>
    <string name="menu_events">Events</string>
    <string name="menu_setdailybudget">Set daily budget</string>
    <string name="title_activity_graph">History Graph</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_categories">Manage categories</string>
    <string name="title_activity_currencies">Manage currencies</string>
    <string name="title_activity_backup">Backup</string>
    <string name="title_activity_installments">Installments</string>
    <string name="title_activity_events">Events</string>
    <string name="menu_statistics">Statistics</string>
    <string name="all_years">All years</string>
    <string name="all_months">All months</string>
    <string name="all_categories">All categories</string>
    <string name="menu_editcurrency">Edit currency</string>
    <string name="installments_info_text">Installments are a way to spread a large transaction out over
        multiple days and are meant to be used for e.g. rent, a new TV, etc. The
        installments are paid off every day until the whole transaction is done. Longpress 
        an installment to delete it.</string>
    <string name="events_info_text">Events are used to group categories together for a specific event 
        e.g. trips or vacation. When events are active, all made transactions will be linked to them.</string>
        <string name="currencies_info_text">Press the button to create a new currency. Tap a currency to set it as the active one.
             Longpress a currency to edit or delete it.</string>
    <string name="versionName">Mnemosyne</string>
    <string name="versionNameExplanation">Mnemosyne was the personification of memory in Greek mythology.
         A Titanide, or Titaness, she was the daughter of Uranus and Gaia, and the mother of the nine Muses by Zeus.</string>
    <string name="whats_new">
        3.4:\n
        Categories can now be sorted\n
        3.3.1:\n
        - Fixed bug where app would not start for some users\n
        3.3:\n
        - Events. Log transactions under one or more events to keep track of costs for e.g. trips.\n
        - Improved currency functionality. Currencies can now be saved and easier switched between as well as used on the fly.\n
        - Fixed bug in long pressing of prices\n
	</string>
	<string name="about_info">Made by Alexander Steen\n\n</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
        
    <string-array name="config_values_array">
    	<item>dailyBudget</item>
    	<item>currency</item>
    	<item>printCurrencyAfter</item>
    	<item>exchangeRate</item>
    </string-array>
    
</resources>