<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_margin="10dip">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    <ImageView
        android:id="@+id/imageViewApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:onClick="showExplanation"
         />
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_marginLeft="5dip">
		    <TextView
		        android:id="@+id/textViewAppTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		    
		    <TextView
	        android:id="@+id/textViewVersion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Unknown version"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	         />
	    </LinearLayout>
	</LinearLayout>
    
	<TextView
        android:id="@+id/textViewAboutInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_info"/>
    <TextView
        android:id="@+id/textViewWhatsNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="What's new?"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewWhatsNewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_new"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>